# backend-joltamp

./: Cargo.toml
src/: main.rs
src/functions/: mod.rs
src/routes/: mod.rs
src/routes/friends/: getfriends.rs  mod.rs
src/routes/users/: changeselfinfo.rs  getinfo.rs  getselfinfo.rs  isadmin.rs  login.rs  mod.rs  register.rs  setstatus.rs
src/security/: passwords.rs
src/types/: friend.rs  mod.rs  types.rs  user.rs
