[package]
name = "backend-joltamp-rewrite"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
scylla = {version = "0.15.1", features = ["chrono-04"] }
tracing = "0.1.41"
dotenv = "0.15"
thiserror = "2.0.9"
tracing-subscriber = "0.3.19"
uuid = { version = "1.0", features = ["serde", "v4"] }
rand = "0.8.5"
argon2 = "0.6.0-pre.1"
serde_json = "1.0.134"
anyhow = "1.0.95"
chrono = {version = "0.4.39", features = ["serde"]}

